--- a/src/StaticWebAssetsSdk/Targets/Microsoft.NET.Sdk.StaticWebAssets.targets
+++ b/src/StaticWebAssetsSdk/Targets/Microsoft.NET.Sdk.StaticWebAssets.targets
@@ -35,7 +35,8 @@ Copyright (c) .NET Foundation. All rights reserved.
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.DefineStaticWebAssetEndpoints"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Dynamic" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.GenerateStaticWebAssetsDevelopmentManifest"
@@ -55,22 +56,31 @@ Copyright (c) .NET Foundation. All rights reserved.
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.UpdatePackageStaticWebAssets"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" 
+    PrecomputationMode="Static" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.DefineStaticWebAssets"
+    AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" 
+    PrecomputationMode="Static" />
+
+  <UsingTask
+    TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.ResolveStaticWebAssetFingerprints"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
     Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.CollectStaticWebAssetsToCopy"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Static" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.MergeConfigurationProperties"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Static" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.ComputePublishStaticWebAssetsList"
@@ -100,17 +110,20 @@ Copyright (c) .NET Foundation. All rights reserved.
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.FilterStaticWebAssetEndpoints"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Dynamic" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.UpdateStaticWebAssetEndpoints"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Dynamic" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.ResolveStaticWebAssetEndpointRoutes"
     AssemblyFile="$(StaticWebAssetsSdkBuildTasksAssembly)"
-    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''" />
+    Condition="'$(StaticWebAssetsSdkBuildTasksAssembly)' != ''"
+    PrecomputationMode="Dynamic" />
 
   <UsingTask
     TaskName="Microsoft.AspNetCore.StaticWebAssets.Tasks.ResolveFingerprintedStaticWebAssetEndpointsForAssets"
@@ -387,6 +400,7 @@ Copyright (c) .NET Foundation. All rights reserved.
     <_StaticWebAssetCanonicalMetadata Include="CopyToOutputDirectory" />
     <_StaticWebAssetCanonicalMetadata Include="CopyToPublishDirectory" />
     <_StaticWebAssetCanonicalMetadata Include="OriginalItemSpec" />
+    <_StaticWebAssetCanonicalMetadata Include="DeferredFingerprint" />
 
     <!-- Static web assets discovery pattern metadata -->
     <_StaticWebAssetDiscoveryPatternCanonicalMetadata Include="Source" />
@@ -569,7 +583,7 @@ Copyright (c) .NET Foundation. All rights reserved.
 
   <Target Name="AddStaticWebAssetsManifest" DependsOnTargets="ResolveStaticWebAssetsConfiguration">
     <ItemGroup>
-      <ContentWithTargetPath Condition="Exists('$(StaticWebAssetDevelopmentManifestPath)')"
+      <ContentWithTargetPath Condition="'$(GeneratedWebAssetManifests)' == 'true' or Exists('$(StaticWebAssetDevelopmentManifestPath)')"
         Include="$(StaticWebAssetDevelopmentManifestPath)"
         TargetPath="$(TargetName).staticwebassets.runtime.json"
         CopyToOutputDirectory="PreserveNewest"
@@ -579,7 +593,7 @@ Copyright (c) .NET Foundation. All rights reserved.
 
   <Target Name="AddStaticWebAssetEndpointsBuildManifest" DependsOnTargets="ResolveStaticWebAssetsConfiguration">
     <ItemGroup>
-      <ContentWithTargetPath Condition="Exists('$(StaticWebAssetEndpointsBuildManifestPath)')"
+      <ContentWithTargetPath Condition="'$(GeneratedWebAssetManifests)' == 'true' or Exists('$(StaticWebAssetEndpointsBuildManifestPath)')"
         Include="$(StaticWebAssetEndpointsBuildManifestPath)"
         TargetPath="$(TargetName).staticwebassets.endpoints.json"
         CopyToOutputDirectory="PreserveNewest"
@@ -594,7 +608,8 @@ Copyright (c) .NET Foundation. All rights reserved.
 
   <Target Name="GenerateComputedBuildStaticWebAssets" DependsOnTargets="$(GenerateComputedBuildStaticWebAssetsDependsOn)" />
 
-  <Target Name="GenerateStaticWebAssetsManifest" DependsOnTargets="$(GenerateStaticWebAssetsManifestDependsOn)">
+  <Target Name="GenerateStaticWebAssetsManifest" DependsOnTargets="$(GenerateStaticWebAssetsManifestDependsOn)"
+    Deferred="Item:_StaticWebAssetManifestResolved:w">
 
     <MergeStaticWebAssets Condition="'@(StaticWebAssetsEmbeddedConfiguration)' != ''"
       CandidateAssets="@(StaticWebAsset)"
@@ -611,6 +626,10 @@ Copyright (c) .NET Foundation. All rights reserved.
       <StaticWebAssetDiscoveryPattern Include="@(_MergedStaticWebAssetDiscoveryPattern)" />
     </ItemGroup>
 
+    <ResolveStaticWebAssetFingerprints Assets="@(StaticWebAsset)">
+      <Output TaskParameter="Assets" ItemName="_StaticWebAssetManifestResolved" />
+    </ResolveStaticWebAssetFingerprints>
+
     <GenerateStaticWebAssetsManifest
       Source="$(PackageId)"
       BasePath="$(StaticWebAssetBasePath)"
@@ -618,7 +637,8 @@ Copyright (c) .NET Foundation. All rights reserved.
       ManifestType="Build"
       ReferencedProjectsConfigurations="@(StaticWebAssetProjectConfiguration)"
       DiscoveryPatterns="@(StaticWebAssetDiscoveryPattern)"
-      Assets="@(StaticWebAsset)"
+      Assets="@(_StaticWebAssetManifestResolved)"
+      PrecomputeInputs="@(StaticWebAsset)"
       Endpoints="@(StaticWebAssetEndpoint)"
       ManifestPath="$(StaticWebAssetBuildManifestPath)">
     </GenerateStaticWebAssetsManifest>
@@ -626,14 +646,14 @@ Copyright (c) .NET Foundation. All rights reserved.
     <GenerateStaticWebAssetEndpointsManifest
       Source="$(PackageId)"
       ManifestType="Build"
-      Assets="@(StaticWebAsset)"
+      Assets="@(_StaticWebAssetManifestResolved)"
       Endpoints="@(StaticWebAssetEndpoint)"
       ManifestPath="$(StaticWebAssetEndpointsBuildManifestPath)">
     </GenerateStaticWebAssetEndpointsManifest>
 
     <GenerateStaticWebAssetsDevelopmentManifest
       DiscoveryPatterns="@(StaticWebAssetDiscoveryPattern)"
-      Assets="@(StaticWebAsset)"
+      Assets="@(_StaticWebAssetManifestResolved)"
       Source="$(PackageId)"
       ManifestPath="$(StaticWebAssetDevelopmentManifestPath)">
     </GenerateStaticWebAssetsDevelopmentManifest>
@@ -661,7 +681,8 @@ Copyright (c) .NET Foundation. All rights reserved.
   <Target Name="ResolveProjectStaticWebAssets"
     Condition="'$(NoBuild)' != 'true'"
     BeforeTargets="AssignTargetPaths"
-    DependsOnTargets="ResolveStaticWebAssetsConfiguration;UpdateExistingPackageStaticWebAssets">
+    DependsOnTargets="ResolveStaticWebAssetsConfiguration;UpdateExistingPackageStaticWebAssets"
+    Deferred="Item:StaticWebAssetResolved:w;Item:StaticWebAssetEndpoint:w">
 
     <DefineStaticWebAssets
       CandidateAssets="@(Content)"
@@ -672,12 +693,17 @@ Copyright (c) .NET Foundation. All rights reserved.
       SourceId="$(PackageId)"
       ContentRoot="$(MSBuildProjectDirectory)\wwwroot\"
       BasePath="$(StaticWebAssetBasePath)"
-      AssetMergeSource="$(StaticWebAssetMergeTarget)">
+      AssetMergeSource="$(StaticWebAssetMergeTarget)"
+      DeferredFingerprint="$(IsPrecomputePhase)">
         <Output TaskParameter="Assets" ItemName="StaticWebAsset" />
     </DefineStaticWebAssets>
 
+    <ResolveStaticWebAssetFingerprints Assets="@(StaticWebAsset)">
+      <Output TaskParameter="Assets" ItemName="StaticWebAssetResolved" />
+    </ResolveStaticWebAssetFingerprints>
+
     <DefineStaticWebAssetEndpoints
-      CandidateAssets="@(StaticWebAsset)"
+      CandidateAssets="@(StaticWebAssetResolved)"
       ExistingEndpoints="@(StaticWebAssetEndpoint)"
       ContentTypeMappings="@(StaticWebAssetContentTypeMapping)"
     >
